--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "clean": "rimraf build dist",
     "lint": "npm run license && eslint --fix --no-error-on-unmatched-pattern src/ test/",
     "bundle": "rollup --no-treeshake -c rollup.config.mjs",
-    "build": "npm run clean && npm run bundle && ncp appsscript.json dist/appsscript.json && cp src/*.html dist/",
+    "build": "npm run clean && npm run bundle && ncp appsscript.json dist/appsscript.json && npx cpx \"src/*.html\" dist/",
     "license": "license-check-and-add add -f license-config.json",
     "test": "jest test/ --passWithNoTests --detectOpenHandles",
     "pre-deploy": "npm run lint && npm run test && npm run build && ncp .clasp-dev.json .clasp.json",
@@ -48,6 +48,8 @@
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^15.2.3",
+    "@types/minimatch": "^5.1.2",
+    "cpx": "^1.5.0",
     "google-ads-api": "^21.0.1"
   }
 }
